# my-recipes-shopping-list

./: .env.dist  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: config.py  db_connector.py  main.py  models.py  schemas.py
app/routers/: recipes.py
tests/: test_main.py
tests/routers/: test_recipes.py
